--- a/zc.ipynb
+++ b/zc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,15 @@
     "\n",
     "    return zcseq\n",
     "\n",
-    "# print(zcsequence(3, 137))\n",
-    "seq = zcsequence(3, 137)\n",
+    "def genSignal(periods, u, seq_len):\n",
+    "    return np.concatenate([zcsequence(u, seq_len, offset) for offset in range(periods)])\n",
     "\n",
-    "with open(\"zcseq.txt\", \"w\") as f:\n",
-    "    f.write(np.array2string(seq.real, separator=','))\n",
-    "    \n",
-    "    f.write(np.array2string(seq.imag, separator=','))\n",
+    "# print(zcsequence(3, 137))\n",
+    "seq = genSignal(10, 3, 137)\n",
+    "np.savetxt(\"zc_real\", seq.real, newline=', \\n')\n",
+    "np.savetxt(\"zc_imag\", seq.imag, newline=', \\n')\n",
+    "\n",
+    "\n",
     "    "
    ]
   }
