--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.873855759563998 0.4409766666666667\n"
+      "15.0 0.30666666666666664\n"
      ]
     }
    ],
    "source": [
     "# f = 1.4399e9\n",
-    "f = 1.8899e9\n",
+    "f = 2e9\n",
     "c = 3e8\n",
-    "gap = 7\n",
+    "gap = 4.6\n",
     "lam = c/f*100\n",
     "norm_gap = gap/lam\n",
     "print(lam, norm_gap)\n",
@@ -180,6 +180,209 @@
     "# {1, 1, 0, 0},\n",
     "# {1, 0, 1, 0}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6.6cm for TX/RX A-B\n",
+    "# 4.6cm for TX/RX-RX2 A-B\n",
+    "# 2.5cm for RX2 A-B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratio = 0.5\n",
+    "gap = 12\n",
+    "lam = gap/ratio*0.01\n",
+    "c = 3e8\n",
+    "freq = c/lam\n",
+    "print(freq/1e9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antenna0: [2 2 0], r=99.16146429435176cm, phase=0.0rads\n",
+      "Antenna1: [-2  2  0], r=99.16150463259419cm, phase=3.1681581517715665e-05rads\n",
+      "Antenna2: [ 2 -2  0], r=103.11641964789119cm, phase=3.106214670988776rads\n",
+      "Antenna3: [-2 -2  0], r=103.11645843899024cm, phase=3.1062451374467215rads\n"
+     ]
+    }
+   ],
+   "source": [
+    "phs = [0.2, 0.0, 0.0, 0.2]\n",
+    "obj = [0.001, 100, 15]\n",
+    "x = [2, -2, 2, -2]\n",
+    "y = [2, 2, -2, -2]\n",
+    "z = [0, 0, 0, 0]\n",
+    "coor = np.array([x,y,z])\n",
+    "obj = np.array(obj)\n",
+    "\n",
+    "def ph2dist(phase, gap=4, ratio=0.5):\n",
+    "    c = 3e8\n",
+    "    wavelength = gap/ratio\n",
+    "    # freq = c/wavelength*100\n",
+    "    dist = phase/np.pi/2*wavelength\n",
+    "    return dist\n",
+    "\n",
+    "def dist2ph(dist, gap=4, ratio=0.5):\n",
+    "    c = 3e8\n",
+    "    wavelength = gap/ratio\n",
+    "    # freq = c/wavelength*100\n",
+    "    phase = dist/wavelength*2*np.pi\n",
+    "    return phase\n",
+    "\n",
+    "def coor2dist(ants, obj):\n",
+    "    dist = []\n",
+    "    for ant in ants:\n",
+    "        dist.append(np.linalg.norm(ant - obj)) \n",
+    "    return np.array(dist) \n",
+    "\n",
+    "\n",
+    "# r = ph2dist(np.array(phs))\n",
+    "r = coor2dist(coor.T, obj)\n",
+    "ph = dist2ph(r-r[0])\n",
+    "for i in range(len(x)):\n",
+    "    print(\"Antenna{}: {}, r={}cm, phase={}rads\".format(i, coor[:, i], r[i], ph[i]))\n",
+    "r = r-r[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute: ant 0, ant 1\n",
+      "Compute: ant 1, ant 2\n",
+      "Compute: ant 2, ant 3\n",
+      "Compute: ant 3, ant 0\n",
+      "Compute: ant 1, ant 3\n",
+      "Compute: ant 0, ant 2\n",
+      "A: [[-8.00000000e+00  0.00000000e+00  0.00000000e+00  8.06764849e-05]\n",
+      " [ 8.00000000e+00 -8.00000000e+00  0.00000000e+00  7.90983003e+00]\n",
+      " [-8.00000000e+00  0.00000000e+00  0.00000000e+00  7.75821981e-05]\n",
+      " [ 8.00000000e+00  8.00000000e+00  0.00000000e+00 -7.90998829e+00]\n",
+      " [ 0.00000000e+00 -8.00000000e+00  0.00000000e+00  7.90990761e+00]\n",
+      " [ 0.00000000e+00 -8.00000000e+00  0.00000000e+00  7.90991071e+00]]\n",
+      " b[-1.62717380e-09 -1.56416718e+01 -3.06835634e-04  1.56419787e+01\n",
+      " -1.56419787e+01 -1.56416718e+01]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "order = [\n",
+    "    [0, 1, 2, 3, 1, 0],\n",
+    "    [1, 2, 3, 0, 3, 2]\n",
+    "]\n",
+    "order = np.array(order).T\n",
+    "A = []\n",
+    "b = []\n",
+    "\n",
+    "for i in range(order.shape[0]):\n",
+    "    print(\"Compute: ant {}, ant {}\".format(order[i, 0], order[i, 1]))\n",
+    "    coor_diff = coor[:, order[i, 1]] - coor[:, order[i, 0]]\n",
+    "    coor_sum = coor[:, order[i, 1]] + coor[:, order[i, 0]]\n",
+    "    diffs = 2*np.append(coor_diff, r[order[i, 1]] - r[order[i, 0]])\n",
+    "    prod = np.append(coor_diff, r[order[i, 0]] - r[order[i, 1]]) * np.append(coor_sum, r[order[i, 1]] + r[order[i, 0]])\n",
+    "    # print(\"Coefficients:\\n left {} \\n right {}\".format(diffs, prod))\n",
+    "    A.append(diffs)\n",
+    "    b.append(sum(prod))\n",
+    "\n",
+    "A = np.asarray(A)\n",
+    "b = np.asarray(b)\n",
+    "print(\"A: {}\\n b{}\\n\".format(A, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.00000000e-03, 1.00000000e+02, 0.00000000e+00, 9.91614644e+01]),\n",
+       " array([], dtype=float64),\n",
+       " 3,\n",
+       " array([2.25003700e+01, 1.60000000e+01, 2.20034551e-06, 0.00000000e+00]))"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.linalg.lstsq(A, b, rcond=None)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.00000000e-03, 1.00000000e+02, 1.50000000e+01, 9.91614644e+01]),\n",
+       " -3.04597520481408e-11)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = X[0]\n",
+    "sol[2] = np.sqrt(sol[3]**2 - (sol[1]-y[0])**2 - (sol[0]-x[0])**2)\n",
+    "sol, (A@sol-b).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
